new-user-service/new-user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: new-user-service
  template:
    metadata:
      labels:
        app: new-user-service
    spec:
      containers:
      - name: new-user-service
        image: new-user-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: new-user-service
spec:
  selector:
    app: new-user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
